--- a/config.example.ini
+++ b/config.example.ini
@@ -18,12 +18,19 @@ cleanup_file_age = 3600
 # Number of concurrent worker threads
 upload_workers = 1
 
+# Max uploads allowed to be queued but not yet running
+max_pending_uploads = 200
+
 # Retry behavior for S3 operations
 max_s3_retries = 3
 s3_retry_base_delay = 1.0
 
 # Number of keys requested per ListObjectsV2 call during cleanup
 s3_list_page_size = 1000
+
+# Cleanup throttling
+cleanup_batch_size = 200
+cleanup_prefix_batch_size = 25
 
 
 [aws]
